--- a/MG.html
+++ b/MG.html
@@ -169,6 +169,7 @@
         <img src="imagens1/gon5.PNG" width="1165" height="475" vspace="07px" hspace="10px">
     </section>
     <section>
+
         <iframe width="1190" height="480" src="https://www.youtube.com/embed/th8IQ7Swros" frameborder="0" allow="accelerometer; autoplay; 
             clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
         </iframe>
@@ -205,5 +206,88 @@
             estaduais da serra
             do Brigadeiro e da serra do Papagaio (Minas) e Campos do Jordão (São Paulo).</h3><br><br><br><br>
 </body>
+
+
+<center id="MG">
+    <h3> SÃO THOMÉ DAS LETRAS - MINAS GERAIS </h3>
+</center>
+
+<a href="https://www.dicasdehoteis.net/pousadas-em-sao-thome-das-letras/" target="_blank">
+    <h4> <b> <i> Valores dos Hoteis e pousadas de São Thomé das Letras </i> </b> </h4>
+</a>
+
+<section>
+    <img src="imagens1/tome1.PNG" width="575" height="475" vspace="07px" hspace="10px">
+    <img src="imagens1/tome3.PNG" width="575" height="475" vspace="07px" hspace="10px">
+    <img src="imagens1/tome2.PNG" width="575" height="475" vspace="07px" hspace="10px">
+    <img src="imagens1/tome4.PNG" width="575" height="475" vspace="07px" hspace="10px">
+</section>
+
+<iframe width="1190" height="480" src="https://www.youtube.com/embed/EZ8mDCNhPYo" frameborder="0" allow="accelerometer; 
+autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+</iframe>
+
+<h3 id="texto"> <dfn> São Thomé das Letras </dfn>
+    Essa pequena cidade tem uma fama mística, com muitas lendas locais. Ela fica no alto da serra,
+     e possui a famosa Pedra de São Thomé, um sedimento mineral de quartzito, matéria-prima de muitos dos artesanatos
+      locais. </h3> <br><br><br><br>
+
+     <center id="MG">
+        <h3> CARRANCAS - MINAS GERAIS </h3>
+    </center>
+
+    <a href="https://www.carrancas.com.br/hospedagem/pousadas.shtml" target="_blank">
+        <h4><b><i>Valores dos Hoteis e pousadas de Carrancas</i></b></h4>
+    </a>
+
+    <section>
+        <img src="imagens1/carra1.PNG" width="1165" height="475" vspace="07px" hspace="10px">
+        <img src="imagens1/carra2.PNG" width="575" height="475" vspace="07px" hspace="10px">
+        <img src="imagens1/carra3.PNG" width="575" height="475" vspace="07px" hspace="10px">
+        <img src="imagens1/carra4.PNG" width="575" height="475" vspace="07px" hspace="10px">
+        <img src="imagens1/carra5.PNG" width="575" height="475" vspace="07px" hspace="10px">
+        <img src="imagens1/carra6.PNG" width="1165" height="475" vspace="07px" hspace="10px">
+    </section>
+
+      <iframe width="1190" height="380" src="https://www.youtube.com/embed/cMGfrzn-sBY" frameborder="0" allow="accelerometer; 
+      autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+    </iframe>
+
+    <section>
+        <h3 id="texto"> <dfn> Carrancas - MG </dfn> Por fim, a sugestão é Carrancas, um dos recentes pólos de eco turismo 
+            da região de Minas Gerais. O Complexo da Zilda é um dos mais famosos pontos turísticos, guardando lagos e 
+            cachoeiras de tirar o fôlego..</h3><br><br><br><br>
+    </section>
+
+    <center id="MG">
+        <h3> SERRA DO CIPÓ - MINAS GERAIS </h3>
+    </center>
+
+    <a href="https://www.feriasbrasil.com.br/mg/serradocipo/hoteis-pousadas.cfm?FiltroFaixa=1" target="_blank">
+        <h4><b><i>Valores dos Hoteis e pousadas de Serra do Cipó </i></b></h4>
+    </a>
+
+    <section>
+        <img src="imagens1/cipo1.PNG" width="575" height="475" vspace="07px" hspace="10px">
+        <img src="imagens1/cipo2.PNG" width="575" height="475" vspace="07px" hspace="10px">
+        <img src="imagens1/cipo3.PNG" width="1165" height="475" vspace="07px" hspace="10px">
+        <img src="imagens1/cipo4.PNG" width="575" height="475" vspace="07px" hspace="10px">
+        <img src="imagens1/cipo5.PNG" width="575" height="475" vspace="07px" hspace="10px">
+        <img src="imagens1/cipo6.PNG" width="1165" height="475" vspace="07px" hspace="10px">
+    </section>
+
+    <section>
+        <h3 id="texto"> <dfn> Serra do Cipó - MG </dfn> Um dos pontos turísticos mais famosos de Minas Gerais, a Serra do Cipó
+             fica na região de Belo Horizonte e merece uma visita daqueles apaixonados por cachoeiras. Você pode visitar o 
+             Parque Nacional, na zona rural, e encontrar diversas atrações. Só fique 
+            atento ao horário de visitação do parque, que tem um número restrito de visitantes por dia para a preservação local.</h3><br><br><br><br>
+    </section>
+
+    <iframe width="1190" height="480" src="https://www.youtube.com/embed/JjyLhZABz20" frameborder="0" allow="accelerometer; autoplay;
+     clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+    </iframe>
+
+</body>
+
 
 <footer> Desenvolvido por Deusdeth J.C Silva</footer>
