--- a/MG.html
+++ b/MG.html
@@ -1,6 +1,13 @@
-<head>
+<!DOCTYPE html>
+<html lang="pt-br">
+
+<head> 
+    <meta name="author" content="Everson da Luz">
+    <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="index2.html">
     <link rel="stylesheet" type="text/css" href="mg.css">
+    <link rel="import" href="index.html">
+    <link rel="import" href="Mt.html">
 </head>
 
 <title>A maravilhosa Minas Gerais</title>
@@ -16,6 +23,16 @@
         </div>
     </div>   
 </header>
+
+<nav>
+    <a href="Mt.html" target="_blank"> <em>CONHEÇA TAMBÉM AS MARAVILHOSA DE MATO GROSSO</em></a>
+</nav>
+
+<nav>
+    <a href="index.html" target="_blank"> <em>CONHEÇA TAMBÉM AS MARAVILHAS DE SÃO PAULO</em></a>
+</nav>
+
+
 
 <style>
     body {
