--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
             <a href="MG.html" target="_blank"> <em>CONHEÇA TAMBÉM A MARAVILHOSA MINAS GERAIS</em></a>
         </nav>
 
+        <nav>
+            <a href="Mt.html" target="_blank"> <em>CONHEÇA TAMBÉM AS MARAVILHAS DE MATO GROSSO</em></a>
+        </nav>
+
         <style>
 
             em {
