--- a/Mt.html
+++ b/Mt.html
@@ -98,22 +98,30 @@
     </section>
 
     <section>
-        <h2>1º dia</h2>
 
-        <dt>Aquário encantado</dt> <dd>flutuação em um rio de água cristalina. Muitos peixes.</dd>
-        <dt>Balneário estivado</dt> <dd>para um banho e almoço.</dd>
-        <dt>Lagoa das Araras </dt> <dd>Fim de tarde para ver os pássaros retornando ao ninho (é lindo!).</dd>
-        <dt>Jantar no espetinho</dt> <dd>único local aberto.</dd>
+        <center> 
+            <samp>Algumas dicas de onde encontrar adrenalida misturada com tranquilidade.</samp>
+        </center>
+
+        <h2>1º dia</h2>
+        <div class="tags">
+        <dt>Aquário encantado</dt> <dd>flutuação em um rio de água cristalina. Muitos peixes.</dd>&nbsp;
+        <dt>Balneário estivado</dt> <dd>para um banho e almoço.</dd>&nbsp;
+        <dt>Lagoa das Araras </dt> <dd>Fim de tarde para ver os pássaros retornando ao ninho (é lindo!).</dd>&nbsp;
+        <dt>Jantar no espetinho</dt> <dd>único local aberto.</dd>&nbsp;
 
         <h2>2º dia</h2>
+       
 
-        <dt>Cachoeira Serra Azul</dt> <dd>a estrutura do local é ótima, mas é necessário subir 400 e poucos degraus..</dd>
-        <dt>Flutuação no rio Triste</dt> <dd>é possível ver arraias e vários peixes. É lindo!.</dd>
+        <dt>Cachoeira Serra Azul</dt> <dd>a estrutura do local é ótima, mas é necessário subir 400 e poucos degraus..</dd>&nbsp;
+        <dt>Flutuação no rio Triste</dt> <dd>é possível ver arraias e vários peixes. É lindo!.</dd>&nbsp;
 
         <h2>3º dia</h2>
+        
 
-        <dt>Bóia Cross no Duto do Quebo</dt> <dd>para quem quer um passeio descontraído e emocionante, você desce de bóia e passa por uma caverna cheia de morcegos. A paisagem e linda!.</dd>
-        <dt>Almoço no restaurante Vila da Serra (na Vila bom Jardim)</dt> <dd>a comida da é boa e barata.  Retornamos para Cuiabá as 14:00, a estrada estava vazia e sossegada.”</dd>
+        <dt>Bóia Cross no Duto do Quebo</dt> <dd>para quem quer um passeio descontraído e emocionante, você desce de bóia e passa por uma caverna cheia de morcegos. A paisagem e linda!.</dd>&nbsp;
+        <dt>Almoço no restaurante Vila da Serra (na Vila bom Jardim)</dt> <dd>a comida da é boa e barata.  Retornamos para Cuiabá as 14:00, a estrada estava vazia e sossegada.”</dd>&nbsp;
+        </div>
     </section>
 
 
