--- a/index.html
+++ b/index.html
@@ -7,13 +7,18 @@
     <meta name="author" content="Everson da Luz">
     <title>Pontos turísticos de São Paulo</title>
     <meta charset="utf-8">
+    <link rel="import" href="index.html">
+    <link rel="import" href="MG.html">
+    <link rel="import" href="mara.html">
+    <link rel="import" href="Mt.html">
     <title>Pontos turísticos em São paulo</title>
-    <p>De play e curta uma musica enquanto explora a página</p>
-    <iframe width="1330" height="500" src="https://www.youtube.com/embed/EpRJY-hI6Bs" frameborder="5"
-        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-    </iframe>
+    
 
 </head>
+
+<header class="titulo">
+    <img src="img/newsao.PNG" width="1335px" height="550px">
+</header>
 
 <header>
 
@@ -30,12 +35,11 @@
     <a href="Mt.html" target="_blank"> <em>CONHEÇA TAMBÉM AS MARAVILHAS DE MATO GROSSO</em></a>
 </nav>
 
+<nav>
+    <a href="mara.html" target="_blank"> <em>CONHEÇA TAMBÉM AS MARAVILHAS DE MARANHÃO</em></a>
+</nav>
+
 </header>
-
-
-
-
-
 
 
 <body bgcolor="#F5FFFA">
