--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <meta name="author" content="Everson da Luz">
     <title>Pontos turísticos de São Paulo</title>
     <meta charset="utf-8">
-    <link rel="import" href="index.html">
-    <link rel="import" href="MG.html">
-    <link rel="import" href="mara.html">
-    <link rel="import" href="Mt.html">
+    <link rel="stylesheet" href="RNnatal.css">
+  <link rel="import" href="index.html">
+  <link rel="import" href="MG.html">
+  <link rel="import" href="mara.html">
+  <link rel="import" href="Mt.html">
     <title>Pontos turísticos em São paulo</title>
     
 
