--- a/MG.html
+++ b/MG.html
@@ -4,9 +4,8 @@
 <head>
     <meta name="author" content="Everson da Luz">
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="index2.html">
     <link rel="stylesheet" type="text/css" href="mg.css">
-    <link rel="stylesheet" href="RNnatal.css">
+    <link rel="stylesheet" href="RNnatal.html">
   <link rel="import" href="index.html">
   <link rel="import" href="MG.html">
   <link rel="import" href="mara.html">
