--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Everson da Luz">
     <title>Pontos turísticos de São Paulo</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="RNnatal.css">
+    <link rel="stylesheet" href="RNnatal.html">
   <link rel="import" href="index.html">
   <link rel="import" href="MG.html">
   <link rel="import" href="mara.html">
