--- a/MG.html
+++ b/MG.html
@@ -5,7 +5,7 @@
     <meta name="author" content="Everson da Luz">
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="mg.css">
-    <link rel="stylesheet" href="RNnatal.html">
+    <link rel="import" href="RNnatal.html">
   <link rel="import" href="index.html">
   <link rel="import" href="MG.html">
   <link rel="import" href="mara.html">
