--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="css/style.css">
-
     <meta name="author" content="Everson da Luz">
     <title>Pontos turísticos de São Paulo</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="RNnatal.html">
-  <link rel="import" href="index.html">
-  <link rel="import" href="MG.html">
-  <link rel="import" href="mara.html">
-  <link rel="import" href="Mt.html">
-    <title>Pontos turísticos em São paulo</title>
+</head>
+<head>
+    <link rel="import" href="RNnatal.html">
+    <link rel="import" href="MG.html">
+    <link rel="import" href="mara.html">
+    <link rel="import" href="Mt.html">
+</head>
+    
+
     
 
 </head>
