--- a/Mt.html
+++ b/Mt.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="mt.css">
-    <link rel="stylesheet" href="RNnatal.html">
+    <link rel="import" href="RNnatal.html">
   <link rel="import" href="index.html">
   <link rel="import" href="MG.html">
   <link rel="import" href="mara.html">
