--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
 <head>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <meta name="author" content="Everson da Luz">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Pontos turísticos de São Paulo</title>
     <meta charset="utf-8">
-</head>
-<head>
+
     <link rel="import" href="RNnatal.html">
     <link rel="import" href="MG.html">
     <link rel="import" href="mara.html">
     <link rel="import" href="Mt.html">
 </head>
+
     
 
     
