--- a/MG.html
+++ b/MG.html
@@ -4,10 +4,11 @@
 <head>
     <meta name="author" content="Everson da Luz">
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="mg.css">
     <link rel="import" href="RNnatal.html">
   <link rel="import" href="index.html">
-  <link rel="import" href="MG.html">
+ 
   <link rel="import" href="mara.html">
   <link rel="import" href="Mt.html">
 
