--- a/mara.html
+++ b/mara.html
@@ -5,10 +5,10 @@
   <title>Turismo em Maranhão</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="mara.css">
   <link rel="import" href="RNnatal.html">
   <link rel="import" href="index.html">
   <link rel="import" href="MG.html">
-  <link rel="import" href="mara.html">
   <link rel="import" href="Mt.html">
 </head>
 
