--- a/Mt.html
+++ b/Mt.html
@@ -8,7 +8,7 @@
     
     <link rel="stylesheet" href="mt.css">
 
-    <link rel="import" href="RNnatal.html">
+    <link rel="import" href="Natal.html"
   <link rel="import" href="index.html">
   <link rel="import" href="MG.html">
   <link rel="import" href="mara.html">
