--- a/html - Copia/RNnatal.html
+++ b/html - Copia/RNnatal.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-br">
 
@@ -7,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
-  <link rel="stylesheet" href="RNnatal.css">
+  <link rel="stylesheet" href="natal.css">
   <link rel="import" href="index.html">
   <link rel="import" href="MG.html">
   <link rel="import" href="mara.html">
@@ -56,7 +55,7 @@
 <center>
 
 
-  <img style="margin-top:50px;" src="natalimg/maracajau.PNG"width="1180" height="700" vspace="12px">
+  <img style="margin-top:50px;" src="imgRN/maracajau.PNG"width="1180" height="700" vspace="12px">
 <div class="button--border-rotated"><h1><a>Maracajaú e suas praias
    de águas de tom esverdeado mornas e cristalinas.</a></h1></div>
 
@@ -75,13 +74,13 @@
     <center><iframe width="1180" height="480" src="https://www.youtube.com/embed/skwRx21jnRg" frameborder="0"
        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
 
-<img style="margin-top:50px;" src="natalimg/natal13.PNG"width="900" height="400" vspace="12px">
+<img style="margin-top:50px;" src="imgRN/natal13.PNG"width="900" height="400" vspace="12px">
 <div class="button--border-rotated"><h1><a>Portalegre, no alto oeste Potiguar. Pedra do largato</a></h1></div>
 
-<img style="margin-top:50px;" src="natalimg/natal12.PNG"width="900" height="400" vspace="12px">
+<img style="margin-top:50px;" src="imgRN/natal12.PNG"width="900" height="400" vspace="12px">
 <div class="button--border-rotated"><h1><a>&#9411;&#9398;&#9417;&#9398;	&#9409;	</a></h1></div>
 
-<img style="margin-top:50px;" src="natalimg/natal11.PNG"width="900" height="400" vspace="12px">
+<img style="margin-top:50px;" src="imgRN/natal11.PNG"width="900" height="400" vspace="12px">
 <div class="button--border-rotated"><h1><a>&#9410;	&#9398;	&#9415; &#9398; &#9400;	&#9398;	&#9407;	&#9398;	&#9418;
 </a></h1></div>
 
@@ -94,16 +93,16 @@
 
 <center>
 
-  <img style="margin-top:50px;" src="natalimg/natal1.PNG"width="900" height="400" vspace="12px">
+  <img style="margin-top:50px;" src="imgRN/natal1.PNG"width="900" height="400" vspace="12px">
 <div class="button--border-rotated"><h1><a>&#9410;	&#9398;	&#9415; &#9398; &#9400;	&#9398;	&#9407;	&#9398;	&#9418;</a></h1></div>
 
-<img style="margin-top:50px;" src="natalimg/natal2.PNG"width="900" height="400" vspace="12px">
+<img style="margin-top:50px;" src="imgRN/natal2.PNG"width="900" height="400" vspace="12px">
 <div class="button--border-rotated"><h1><a>Castelo Ze dos montes</a></h1></div>
 
-<img style="margin-top:50px;" src="natalimg/natal3.PNG"width="900" height="400" vspace="12px">
+<img style="margin-top:50px;" src="imgRN/natal3.PNG"width="900" height="400" vspace="12px">
 <div class="button--border-rotated"><h1><a>Forte dos Reis Magos</a></h1></div>
 
-<img style="margin-top:50px;" src="natalimg/natal4.PNG"width="900" height="400" vspace="12px">
+<img style="margin-top:50px;" src="imgRN/natal4.PNG"width="900" height="400" vspace="12px">
 <div class="button--border-rotated"><h1><a>&#9410;	&#9398;	&#9415; &#9398; &#9400;	&#9398;	&#9407;	&#9398;	&#9418;</a></h1></div>
 
 <iframe width="1180" height="480" src="https://www.youtube.com/embed/ZePAISXBeq0" frameborder="0" allow="accelerometer; autoplay; 
@@ -124,13 +123,13 @@ clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
 
 <center>
 
-  <img style="margin-top:50px;" src="natalimg/natal5.PNG"width="900" height="400" vspace="12px">
+  <img style="margin-top:50px;" src="imgRN/natal5.PNG"width="900" height="400" vspace="12px">
 <div class="button--border-rotated"><h1><a>Seridó Potiguar</a></h1></div>
 
-<img style="margin-top:50px;" src="natalimg/natal6.PNG"width="900" height="400" vspace="12px">
+<img style="margin-top:50px;" src="imgRN/natal6.PNG"width="900" height="400" vspace="12px">
 <div class="button--border-rotated"><h1><a>&#9410;	&#9398;	&#9415; &#9398; &#9400;	&#9398;	&#9407;	&#9398;	&#9418;</a></h1></div>
 
-<img style="margin-top:50px;" src="natalimg/natal7.PNG"width="900" height="400" vspace="12px">
+<img style="margin-top:50px;" src="imgRN/natal7.PNG"width="900" height="400" vspace="12px">
 <div class="button--border-rotated"><h1><a>Dunas de Genipabu</a></h1></div>
 
 <h2>Dunas de Genipabu</h2> 
@@ -162,7 +161,7 @@ clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
       </li>
       </ul>
 
-<img style="margin-top:50px;" src="natalimg/morro.PNG"width="900" height="400" vspace="12px">
+<img style="margin-top:50px;" src="imgRN/morro.PNG"width="900" height="400" vspace="12px">
 <div class="button--border-rotated"><h1><a>Praia de ponta negra - Morro do Careca</a></h1></div>
 
 <h2>Morro do Careca</h2> <h3>O que Fazer:</h3>
@@ -177,10 +176,10 @@ clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
       (o canto direito é a parte mais tranquila) e a praia está sempre cheia. Não é indicada para quem prefere um lugar mais sossegado. 
       Nos dias mais cheios, o excesso de guarda-sóis e cadeiras pode até dificultar a circulação.</li>
 
-<img style="margin-top:50px;" src="natalimg/natal8.PNG"width="900" height="400" vspace="12px">
+<img style="margin-top:50px;" src="imgRN/natal8.PNG"width="900" height="400" vspace="12px">
 <div class="button--border-rotated"><h1><a>O passeio pode ser feito em catamarã ou lanche: no caso do catamarã o espaço é maior e balança menos</a></h1></div>
 
-<img style="margin-top:50px;" src="natalimg/natal9.PNG"width="900" height="400" vspace="12px">
+<img style="margin-top:50px;" src="imgRN/natal9.PNG"width="900" height="400" vspace="12px">
 <div class="button--border-rotated"><h1><a>Dunas Vermelhas </a></h1></div>
 
 </center>
