--- a/MG.html
+++ b/MG.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" href="mg.css">
 
- <link rel="import" href="RNnatal.html">
+    <link rel="import" href="Natal.html"
   <link rel="import" href="index.html">
   <link rel="import" href="mara.html">
   <link rel="import" href="Mt.html">
