--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Pontos turísticos de São Paulo</title>
     <meta charset="utf-8">
     
-    <link rel="import" href="RNnatal.html">
+    <link rel="import" href="Natal.html"
     <link rel="import" href="MG.html">
     <link rel="import" href="mara.html">
     <link rel="import" href="Mt.html">
@@ -62,8 +62,7 @@
         }
 
         p {
-            background-color: rgb(158, 243, 183) top: 150px;
-            left: 150px;
+            background-color: rgb(158, 243, 183)
         }
 
         section {
