--- a/mara.html
+++ b/mara.html
@@ -8,9 +8,10 @@
   
   <link rel="stylesheet" type="text/css" href="mara.css">
 
-  <link rel="import" href="RNnatal.html">
+  
   <link rel="import" href="index.html">
   <link rel="import" href="MG.html">
+  <link rel="import" href="Natal.html"
   <link rel="import" href="Mt.html">
 </head>
 
