--- a/Natal.html
+++ b/Natal.html
@@ -23,7 +23,7 @@
 </div>
 
 <a href="https://www.tripadvisor.com.br/Hotels-g303510-c2-State_of_Rio_Grande_do_Norte-Hotels.html" target="_blank">
-  <h4><b><i>Valores dos Hoteis e pousadas do Turismo Maranhense </i></b></h4>
+  <h4><b><i>Valores dos Hoteis e pousadas do Turismo Potiguar </i></b></h4>
 </a>
 
 <header>
