--- a/mara.html
+++ b/mara.html
@@ -8,8 +8,8 @@
   
   <link rel="stylesheet" type="text/css" href="mara.css">
 
-  
   <link rel="import" href="index.html">
+  
   <link rel="import" href="MG.html">
   <link rel="import" href="Natal.html"
   <link rel="import" href="Mt.html">
@@ -85,6 +85,16 @@
     <img src="maranhao/mara2.PNG" width="900" height="400" vspace="12px">
 
   </center>
+
+
+  <p>
+    Você também pode usar uma imagem
+    como vínculo:
+    <a href="index.html">
+    <img border="15px" src="maranhao/mara15.PNG"
+    width="65" height="38">
+    </a>
+    </p>
 
 
   <section>
