--- a/html - Copia/RNnatal.html
+++ b/html - Copia/RNnatal.html
@@ -43,6 +43,8 @@
     <nav>
       <a href="MG.html" target="_blank"> <em>CONHEÇA TAMBÉM AS MARAVILHAS MINAS GERAIS</em></a>
   </nav>
+<nav>
+  <link rel="import" href="Natal.html"></nav>
 
 </header>
 <center>
