--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
 <nav>
     <a href="mara.html" target="_blank"> <em>CONHEÇA TAMBÉM AS MARAVILHAS DE MARANHÃO</em></a>
 </nav>
+<nav>
+<link rel="import" href="Natal.html"</nav>
 
 </header>
 
