--- a/Natal.html
+++ b/Natal.html
@@ -11,6 +11,8 @@
   <link rel="import" href="MG.html">
   <link rel="import" href="mara.html">
   <link rel="import" href="Mt.html">
+  <nav>
+    <link rel="import" href="Natal.html"></nav>
 </head>
 
 <div class="zoom"> 
