--- a/mara.html
+++ b/mara.html
@@ -13,6 +13,9 @@
   <link rel="import" href="MG.html">
   <link rel="import" href="Natal.html"
   <link rel="import" href="Mt.html">
+
+  <nav>
+    <link rel="import" href="Natal.html"></nav>
 </head>
 
 
