--- a/MG.html
+++ b/MG.html
@@ -12,6 +12,8 @@
   <link rel="import" href="index.html">
   <link rel="import" href="mara.html">
   <link rel="import" href="Mt.html">
+  <nav>
+    <link rel="import" href="Natal.html"></nav>
 
 </head>
 
