--- a/Mt.html
+++ b/Mt.html
@@ -41,6 +41,9 @@
     <a href="mara.html" target="_blank"> <em>CONHEÇA TAMBÉM AS MARAVILHAS DE MARANHÃO</em></a>
 </nav>
 
+<nav>
+    <link rel="import" href="Natal.html"></nav>
+
 
 <h5>
     O <i>Mato Grosso</i> é monumental e possui diversos destinos imperdíveis e pouco conhecidos dos brasileiros com
