--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <a href="mara.html" target="_blank"> <em>CONHEÇA TAMBÉM AS MARAVILHAS DE MARANHÃO</em></a>
 </nav>
 <nav>
-<link rel="import" href="Natal.html"</nav>
+<link rel="import" href="Natal.html"></nav>
 
 </header>
 
