--- a/Natal.html
+++ b/Natal.html
@@ -11,6 +11,7 @@
   <link rel="import" href="MG.html">
   <link rel="import" href="mara.html">
   <link rel="import" href="Mt.html">
+  <link rel="import" href="Per.html">
   <nav>
     <link rel="import" href="Natal.html"></nav>
 </head>
@@ -30,21 +31,25 @@
 
 <header>
 
-    <nav>
-        <a href="index.html" target="_blank"> <em>CONHEÇA TAMBÉM A MARAVILHOSA SÃO PAULO </em></a>
-    </nav>
+  <nav>
+    <a href="MG.html" target="_blank"> <em>CONHEÇA TAMBÉM A MARAVILHOSA MINAS GERAIS</em></a>
+</nav>
 
-    <nav>
-        <a href="Mt.html" target="_blank"> <em>CONHEÇA TAMBÉM AS MARAVILHAS DE MATO GROSSO</em></a>
-    </nav>
+<nav>
+    <a href="Mt.html" target="_blank"> <em>CONHEÇA TAMBÉM AS MARAVILHAS DE MATO GROSSO</em></a>
+</nav>
 
-    <nav>
-        <a href="mara.html" target="_blank"> <em>CONHEÇA TAMBÉM AS MARAVILHAS DE MARANHÃO</em></a>
-    </nav>  
+<nav>
+    <a href="mara.html" target="_blank"> <em>CONHEÇA TAMBÉM AS MARAVILHAS DE MARANHÃO</em></a>
+</nav>
 
-    <nav>
-      <a href="MG.html" target="_blank"> <em>CONHEÇA TAMBÉM AS MARAVILHAS MINAS GERAIS</em></a>
-  </nav>
+<nav>
+    <a href="index.html" target="_blank"> <em>CONHEÇA TAMBÉM AS MARAVILHAS DE SÃO PAULO</em></a>
+</nav>
+
+<nav>
+    <a href="Per.html" target="_blank"> <em>CONHEÇA TAMBÉM AS MARAVILHAS DO PERNAMBUCO</em></a>
+</nav>
 
 </header>
 <center>
