--- a/Per.html
+++ b/Per.html
@@ -8,11 +8,12 @@
     
     <link rel="stylesheet" href="per.css">
 
-    <link rel="import" href="Natal.html"
+    <link rel="import" href="Natal.html">
   <link rel="import" href="index.html">
   <link rel="import" href="MG.html">
   <link rel="import" href="mara.html">
   <link rel="import" href="Mt.html">
+
  
 </head>
 
@@ -38,27 +39,47 @@ a cidade velha e a popular área balnear de Boa Viagem</p>
 
 </header>
 
+<nav>
+    <a href="MG.html" target="_blank"> <em>CONHEÇA TAMBÉM A MARAVILHOSA MINAS GERAIS</em></a>
+</nav>
+
+<nav>
+    <a href="Mt.html" target="_blank"> <em>CONHEÇA TAMBÉM AS MARAVILHAS DE MATO GROSSO</em></a>
+</nav>
+
+<nav>
+    <a href="mara.html" target="_blank"> <em>CONHEÇA TAMBÉM AS MARAVILHAS DE MARANHÃO</em></a>
+</nav>
+
+<nav>
+    <a href="index.html" target="_blank"> <em>CONHEÇA TAMBÉM AS MARAVILHAS DE SÃO PAULO</em></a>
+</nav>
+
+<nav>
+    <a href="Natal.html" target="_blank"> <em>CONHEÇA TAMBÉM AS MARAVILHAS DO RIO GRANDE DO NORTE</em></a>
+</nav>
+
 </center>
 
 <center>
 
 <body class="corpo" >
 
-    <center>
-        <dt><h3 class="descrição"> Fernado de Noronha</dt> A cerca de 550 km da costa do Recife, um arquipélago formado por 21 ilhas é um verdadeiro paraíso.
+<center>
+    <dt><h3 class="descrição"> Fernado de Noronha</dt> A cerca de 550 km da costa do Recife, um arquipélago formado por 21 ilhas é um verdadeiro paraíso.
             Trata-se, é claro, de Fernando de Noronha, pérola do litoral brasileiro, conhecido por sua fabulosa natureza de praias
              de areias douradas banhadas por águas turquesa e esmeralda e rodeadas de uma abundante vegetação preservada. 
              E é justamente o cuidado da proteção ecológica que  faz de Fernando de Noronha um destino tão especial e único no Brasil.
-        </h3>
-    </center>
+    </h3>
+</center>
 
-    <div class="perimge">
+<div class="perimge">
         <img class="circle" src="Perimg/noro1.PNG" width="575" height="475" vspace="07px" hspace="10px">
         <img class="circle" src="Perimg/noro2.PNG" width="575" height="475" vspace="07px" hspace="10px">
         <img class="circle" src="Perimg/noro3.PNG" width="575" height="475" vspace="07px" hspace="10px">
         <img class="circle" src="Perimg/noro4.PNG" width="575" height="475" vspace="07px" hspace="10px">
         <img class="circle" src="Perimg/noro5.PNG" width="1170" height="475">
-    </div>
+</div>
 
 
 <cente>
@@ -87,7 +108,31 @@ a cidade velha e a popular área balnear de Boa Viagem</p>
     <iframe width="1180" height="480" src="https://www.youtube.com/embed/DvdHlRrsBoo" frameborder="0" allow="accelerometer; autoplay; 
     clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
+
+<center> <a href="https://www.hoteis.com/de1729481/hoteis-em-porto-de-galinhas-brasil/" target="_blank">Hoteis e pousadas (
+    CLICK AQUI )</a>
+</center>
+
 </cente>
+
+<center>
+    <dt><h3 class="descrição"> Olinda
+        Município em Pernambuco</dt> <DD>Município em Pernambuco</DD>Olinda é uma cidade colonial na costa nordeste do Brasil, perto da cidade
+         do Recife. Fundada em 1535 pelos portugueses, foi construída em encostas íngremes e distingue-se pela arquitetura do século XVIII,
+          com igrejas barrocas, conventos, mosteiros e casas de cores vivas. Originalmente um centro da indústria da cana-de-açúcar, 
+          é agora conhecida como uma colónia de artistas, com diversas galerias, oficinas e museus.
+    </h3>
+</center>
+
+<center>
+    <div class="perimge">
+        <img class="circle" src="Perimg/porto1.PNG" width="575" height="475" vspace="07px" hspace="10px">
+        <img class="circle" src="Perimg/porto2.PNG" width="575" height="475" vspace="07px" hspace="10px">
+        <img class="circle" src="Perimg/porto3.PNG" width="1170" height="475">
+        <img class="circle" src="Perimg/porto4.PNG" width="575" height="475" vspace="07px" hspace="10px">
+        <img class="circle" src="Perimg/porto5.PNG" width="575" height="475" vspace="07px" hspace="10px">
+    </div>
+    </cente>
 
 </body>
 
