--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <title>Pontos turísticos de São Paulo</title>
     <meta charset="utf-8">
     
-    <link rel="import" href="Natal.html"
+    <link rel="import" href="Natal.html">
     <link rel="import" href="MG.html">
     <link rel="import" href="mara.html">
     <link rel="import" href="Mt.html">
+    <link rel="import" href="Per.html">
 </head>
 
     
@@ -40,6 +41,14 @@
 
 <nav>
     <a href="mara.html" target="_blank"> <em>CONHEÇA TAMBÉM AS MARAVILHAS DE MARANHÃO</em></a>
+</nav>
+
+<nav>
+    <a href="Per.html" target="_blank"> <em>CONHEÇA TAMBÉM AS MARAVILHAS DE PERNAMBUCO</em></a>
+</nav>
+
+<nav>
+    <a href="Natal.html" target="_blank"> <em>CONHEÇA TAMBÉM AS MARAVILHAS DO RIO GRANDE DO NORTE</em></a>
 </nav>
 <nav>
 <link rel="import" href="Natal.html"></nav>
@@ -130,7 +139,7 @@
             }
         </style>
 
-        <section>
+        <section <section class="header-site">
             <img src="img/socorro 01.PNG" width="663" height="375" <br clear="left">
             <img src="img/socorro 02.PNG" width="663" height="375" <br clear="left">
             <img src="img/socorro 03.PNG" width="663" height="375" <br clear="left">
