--- a/Mt.html
+++ b/Mt.html
@@ -8,10 +8,11 @@
     
     <link rel="stylesheet" href="mt.css">
 
-    <link rel="import" href="Natal.html"
+    <link rel="import" href="Natal.html">
   <link rel="import" href="index.html">
   <link rel="import" href="MG.html">
   <link rel="import" href="mara.html">
+  <link rel="import" href="Per.html">
  
 </head>
 
@@ -26,15 +27,11 @@
 
 
 <nav>
-
-    <a href="index.html" target="_blank"><em>CONHEÇA TAMBÉM A MARAVILHOSA SÃO PAULO </em></a>
-
+    <a href="MG.html" target="_blank"> <em>CONHEÇA TAMBÉM A MARAVILHOSA MINAS GERAIS</em></a>
 </nav>
 
 <nav>
-
-    <a href="MG.html" target="_blank"> <em>CONHEÇA TAMBÉM A MARAVILHOSA DE MINAS GERAIS </em></a>
-
+    <a href="Per.html" target="_blank"> <em>CONHEÇA TAMBÉM AS MARAVILHAS DE PERNAMBUCO</em></a>
 </nav>
 
 <nav>
@@ -42,7 +39,12 @@
 </nav>
 
 <nav>
-    <link rel="import" href="Natal.html"></nav>
+    <a href="index.html" target="_blank"> <em>CONHEÇA TAMBÉM AS MARAVILHAS DE SÃO PAULO</em></a>
+</nav>
+
+<nav>
+    <a href="Natal.html" target="_blank"> <em>CONHEÇA TAMBÉM AS MARAVILHAS DO RIO GRANDE DO NORTE</em></a>
+</nav>
 
 
 <h5>
