--- a/mara.html
+++ b/mara.html
@@ -9,10 +9,10 @@
   <link rel="stylesheet" type="text/css" href="mara.css">
 
   <link rel="import" href="index.html">
-  
   <link rel="import" href="MG.html">
-  <link rel="import" href="Natal.html"
+  <link rel="import" href="Natal.html">
   <link rel="import" href="Mt.html">
+  <link rel="import" href="Per.html">
 
   <nav>
     <link rel="import" href="Natal.html"></nav>
@@ -23,7 +23,7 @@
 
 
 <nav>
-  <a href="index.html" target="_blank"> <em>CONHEÇA TAMBÉM A MARAVILHOSA SÃO PAULO</em></a>
+  <a href="MG.html" target="_blank"> <em>CONHEÇA TAMBÉM A MARAVILHOSA MINAS GERAIS</em></a>
 </nav>
 
 <nav>
@@ -31,7 +31,15 @@
 </nav>
 
 <nav>
-  <a href="MG.html" target="_blank"> <em>CONHEÇA TAMBÉM AS MARAVILHAS DE MINAS GERAIS</em></a>
+  <a href="Per.html" target="_blank"> <em>CONHEÇA TAMBÉM AS MARAVILHAS DE PERNAMBUCO</em></a>
+</nav>
+
+<nav>
+  <a href="index.html" target="_blank"> <em>CONHEÇA TAMBÉM AS MARAVILHAS DE SÃO PAULO</em></a>
+</nav>
+
+<nav>
+  <a href="Natal.html" target="_blank"> <em>CONHEÇA TAMBÉM AS MARAVILHAS DO RIO GRANDE DO NORTE</em></a>
 </nav>
 
 
