--- a/Per.html
+++ b/Per.html
@@ -73,6 +73,9 @@ a cidade velha e a popular área balnear de Boa Viagem</p>
     </h3>
 </center>
 
+<a class="site" href="https://www.hoteis.com/de1705576/hoteis-em-fernando-de-noronha-brasil/" target="_blank">Hoteis e pousadas (
+    CLICK AQUI )</a>
+
 <div class="perimge">
         <img class="circle" src="Perimg/noro1.PNG" width="575" height="475" vspace="07px" hspace="10px">
         <img class="circle" src="Perimg/noro2.PNG" width="575" height="475" vspace="07px" hspace="10px">
@@ -94,6 +97,9 @@ a cidade velha e a popular área balnear de Boa Viagem</p>
     </dd>
 </h3>
 
+<a class="site" href="https://www.hoteis.com/de1729481/hoteis-em-porto-de-galinhas-brasil/" target="_blank">Hoteis e pousadas (
+    CLICK AQUI )</a>
+
 <center>
 <div class="perimge">
     <img class="circle" src="Perimg/porto1.PNG" width="575" height="475" vspace="07px" hspace="10px">
@@ -108,11 +114,6 @@ a cidade velha e a popular área balnear de Boa Viagem</p>
     <iframe width="1180" height="480" src="https://www.youtube.com/embed/DvdHlRrsBoo" frameborder="0" allow="accelerometer; autoplay; 
     clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
-
-<center> <a href="https://www.hoteis.com/de1729481/hoteis-em-porto-de-galinhas-brasil/" target="_blank">Hoteis e pousadas (
-    CLICK AQUI )</a>
-</center>
-
 </cente>
 
 <center>
@@ -124,15 +125,49 @@ a cidade velha e a popular área balnear de Boa Viagem</p>
     </h3>
 </center>
 
+<a class="site" href="https://www.hoteis.com/de139235/hoteis-em-olinda-brasil/" target="_blank">Hoteis e pousadas (
+    CLICK AQUI )</a>
+
 <center>
     <div class="perimge">
-        <img class="circle" src="Perimg/porto1.PNG" width="575" height="475" vspace="07px" hspace="10px">
-        <img class="circle" src="Perimg/porto2.PNG" width="575" height="475" vspace="07px" hspace="10px">
-        <img class="circle" src="Perimg/porto3.PNG" width="1170" height="475">
-        <img class="circle" src="Perimg/porto4.PNG" width="575" height="475" vspace="07px" hspace="10px">
-        <img class="circle" src="Perimg/porto5.PNG" width="575" height="475" vspace="07px" hspace="10px">
+        <img class="circle" src="Perimg/olinda1.PNG" width="575" height="475" vspace="07px" hspace="10px">
+        <img class="circle" src="Perimg/olinda2.PNG" width="575" height="475" vspace="07px" hspace="10px">
+        <img class="circle" src="Perimg/olinda3.PNG" width="575" height="475" vspace="07px" hspace="10px">
+        <img class="circle" src="Perimg/olinda4.PNG" width="575" height="475" vspace="07px" hspace="10px">
     </div>
     </cente>
+
+<center>
+    <iframe width="853" height="480" src="https://www.youtube.com/embed/FA_01vA-UEw" frameborder="0" allow="accelerometer; autoplay; 
+    clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</center>
+
+<center>
+    <dt><h3 class="descrição">Recife</dt><DD>Recife, a capital do estado de Pernambuco, no nordeste do Brasil,</DD>distingue-se pelos seus vários rios,
+             pontes, ilhéus e penínsulas. Recife Antigo, na própria ilha junto ao porto, é o centro histórico da cidade antiga que data do século XVI.
+              A sul, a popular Praia de Boa Viagem é protegida por recifes e está ladeada de blocos de apartamentos elevados, hotéis modernos e 
+              restaurantes. 
+    </h3>
+</center>
+
+<a class="site" href="https://www.hoteis.com/de157837-at26/hoteis-pousada-recife-brasil/" target="_blank">Hoteis e pousadas (
+        CLICK AQUI )
+</a>
+
+<center>
+    <div class="perimge">
+        <img class="circle" src="Perimg/re4.PNG" width="575" height="475" vspace="07px" hspace="10px">
+        <img class="circle" src="Perimg/re3.PNG" width="575" height="475" vspace="07px" hspace="10px">
+        <img class="circle" src="Perimg/re2.PNG" width="1170" height="475">
+        <img class="circle" src="Perimg/re6.PNG" width="575" height="475" vspace="07px" hspace="10px">
+        
+    </div>
+ </cente>
+
+ <center>
+    <iframe width="853" height="480" src="https://www.youtube.com/embed/IZWzkQjC-0E" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media;
+     gyroscope; picture-in-picture" allowfullscreen></iframe>
+</center>
 
 </body>
 
