--- a/Per.html
+++ b/Per.html
@@ -158,18 +158,97 @@ a cidade velha e a popular área balnear de Boa Viagem</p>
     <div class="perimge">
         <img class="circle" src="Perimg/re4.PNG" width="575" height="475" vspace="07px" hspace="10px">
         <img class="circle" src="Perimg/re3.PNG" width="575" height="475" vspace="07px" hspace="10px">
-        <img class="circle" src="Perimg/re2.PNG" width="1170" height="475">
-        <img class="circle" src="Perimg/re6.PNG" width="575" height="475" vspace="07px" hspace="10px">
-        
+        <img class="circle" src="Perimg/re2.PNG" width="880">
     </div>
  </cente>
 
  <center>
     <iframe width="853" height="480" src="https://www.youtube.com/embed/IZWzkQjC-0E" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media;
      gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 </center>
+
+<center>
+<table border="0" width="90%"
+cellpadding="10">
+<tr>
+
+<td width="40%" valign="top">
+<img class="circle" src="Perimg/tam1.PNG" width="575" height="475" vspace="07px" hspace="10px">
+<dt><h3 class="descrição">Tamandaré</dt><dd>é a sede do município, com áreas urbanizadas, casas de veraneio e barracas que 
+recebem turistas nos finais de semana e na alta temporada. </dd></h3></td>
+
+<img class="circle" src="Perimg/tam2.PNG" width="575" height="475" vspace="07px" hspace="10px">
+<dt><h3 class="descrição">Roteiros para fazer no local</dt><dd>Chegando na cidade, o que fazer em Tamandaré? Bom, opções é o que não faltam. 
+Tamandaré é uma cidade repleta de pontos turísticos e roteiros perfeitos para você explorar. Para te ajudar, separamos alguns dos 
+melhores. Confira!. </dd>
+</h3>
+</td></tr></table>
+
+<table border="0" width="90%"
+cellpadding="10">
+<tr>
+
+<td width="40%" valign="top">
+<img class="circle" src="Perimg/tam3.PNG" width="575" height="475" vspace="07px" hspace="10px">
+<dt><h3 class="descrição">Praia de Carneiros</dt><dd>A Praia dos Carneiros é mais uma grande atração de Tamandaré. 
+Com águas cristalinas, piscinas naturais e peixes das mais variadas espécies e cores, o local é perfeito para quem deseja curtir 
+as férias com paz e tranquilidade.</dd>
+</h3></td>
+
+<td width="40%" valign="top">
+<img class="circle" src="Perimg/tam4.PNG" width="575" height="475" vspace="07px" hspace="10px">
+<dt><h3 class="descrição">Ilha de Santo Aleixo</dt><DD>A Ilha de Santo Aleixo é um paraíso nordestino incrível. Para chegar lá é necessário
+ir até a Praia da Barra de Sirinhaém, de onde partem barcos com destino a ilha. Chegando ao local, você encontra uma ilha particular 
+cercada por um mar calma, piscinas naturais e muita vegetação.
+</h3>
+</td></td></table>
+
+<table border="0" width="90%"
+cellpadding="10">
+<tr>
+
+<td width="40%" valign="top">
+<img class="circle" src="Perimg/car1.PNG" width="575" height="475" vspace="07px" hspace="10px">
+<dt><h3 class="descrição">Caruaru</dt><DD>Se você está procurando pontos turísticos em Pernambuco, que tal visitar Caruaru? </DD>
+<p>Na época da festa junina, Caruaru vira um verdadeiro pólo turístico. As ruas, bares e restaurantes ficam enfeitados e a cidade se torna a “capital do forró”.
+Por isso, se você gosta da festividade e vai viajar para cidade nesta época a dica é reservar seu hotel com antecedência, uma 
+vez que apesar de turística a cidade ainda tem uma estrutura precária.</p></h3>
+
+<td width="40%" valign="top">   
+<img class="circle" src="Perimg/ita1.PNG" width="575" height="475" vspace="07px" hspace="10px">
+<dt><h3 class="descrição">Ilha de Itamaracá- Coroa do Avião</dt><DD>Localizada no litoral norte do estado a Ilha de Itamaracá é o destino 
+perfeito pra quem quer descansar e curtir a natureza. O local tem praias de águas tranquilas, coqueiros, manguezais e colinas de matasnativas.</DD>
+</h3>
+</td></tr></table>
+
+<table border="0" width="90%"
+cellpadding="10">
+<tr>
+    
+<td width="40%" valign="top">
+<img class="circle" src="Perimg/campo1.PNG" width="575" height="475" vspace="07px" hspace="10px">
+<dt><h3 class="descrição">Praia de Campas</dt><DD>Mais uma ótima opção de ponto turístico natural é a Praia de Campas, que possui um mar
+ tranquilo, águas cristalinas, areia dourada e um ambiente incrível. Se você gosta de mais calor humano, esta praia possui muito movimento durante a alta temporada.
+Por outro lado, se você quer tranquilidade, basta ir fora de temporada que você encontrará uma praia praticamente vazia.
+</h3></td>
+
+<td width="40%" valign="top">   
+<img class="circle" src="Perimg/boca.PNG" width="575" height="475" vspace="07px" hspace="10px">
+<dt><h3 class="descrição">Boca da Barra</dt><DD>AUm dos principais recantos de Tamandaré, é uma das mais lindas praias do litoral nordestino.
+ Possui uma extensa faixa de areia dourada, um mar bastante tranquilo, águas cristalinas e muitos coqueiros.
+ É um ambiente bastante frequentado por famílias com crianças, turistas que gostam de jogar um vôlei na areia ou ainda praticar algum 
+ esporte náutico como caiaque.
+</h3>
+</td>
+
+</tr>
+</table></center>
+
 
 </body>
 
 </center>
+
+<footer class="rodapé">Desenvolvido por : <h1>Deusdeth Crisóstomo Silva</h1></footer>
 
