--- a/MG.html
+++ b/MG.html
@@ -20,6 +20,13 @@
 
 <title>A maravilhosa Minas Gerais</title>
 
+
+<p href="#">
+    <span></span>
+      MINAS GERAIS
+</p>
+
+
 <header>
     <div class="zoom">
         <img src="imagens1/minas.PNG" width="1165" height="550" class="img-responsive">
