--- a/Natal.html
+++ b/Natal.html
@@ -16,6 +16,12 @@
     <link rel="import" href="Natal.html"></nav>
 </head>
 
+<i href="#">
+  <span></span>
+     RIO GRANDE DO NORTE
+</i>
+
+
 <div class="zoom"> 
   <center>
   <img src="https://besthqwallpapers.com/Uploads/21-7-2018/60116/thumb2-flag-of-rio-grande-do-norte-4k-state-of-brazil-silk-texture-rio-grande-do-norte-flag.jpg" 
@@ -26,7 +32,7 @@
 </div>
 
 <a href="https://www.tripadvisor.com.br/Hotels-g303510-c2-State_of_Rio_Grande_do_Norte-Hotels.html" target="_blank">
-  <h4><b><i>Valores dos Hoteis e pousadas do Turismo Potiguar </i></b></h4>
+  <h4><b>Valores dos Hoteis e pousadas do Turismo Potiguar</b></h4>
 </a>
 
 <header>
