--- a/mara.html
+++ b/mara.html
@@ -19,7 +19,46 @@
 </head>
 
 
-<a class="css">Viaje pelo Brasil e se delicie com suas maravilhas</a>
+<section class="slideshow">
+  <div class="content">
+      <div class="content-carrousel">
+          <figure class="shadow"> <img src="maranhao/m7.PNG"> </figure>
+          <figure class="shadow"> <img src="maranhao/m6.PNG"> </figure>
+          <figure class="shadow"> <img src="maranhao/m5.PNG"> </figure>
+          <figure class="shadow"> <img src="maranhao/m4.PNG"> </figure>
+          <figure class="shadow"> <img src="maranhao/m3.PNG"> </figure>
+          <figure class="shadow"> <img src="maranhao/m2.PNG"> </figure>
+          <figure class="shadow"> <img src="maranhao/m1.PNG"> </figure>
+          <figure class="shadow"> <img src="maranhao/m.PNG"> </figure>
+          <figure class="shadow"> <img src="maranhao/m9.PNG"> </figure>
+          
+      </div>   
+  </div>     
+
+<header class="titulo">
+  <img src="maranhao/maranhao.PNG" width="1180px" height="550px">
+</header>
+
+<div class="texto">
+  <b>Maranhão é uma das 27 unidades federativas do Brasil, localizada na Região Nordeste do país. O estado faz divisa
+    com três estados
+    brasileiros: Piauí (leste), Tocantins (sul e sudoeste) e Pará (oeste), além do Oceano Atlântico (norte). Com área de
+    331 937,450 km²
+    e com 217 municípios, é o segundo maior estado da região Nordeste e o oitavo maior estado do Brasil. Com uma
+    população de 7 035 055
+    habitantes[7], é o 11º estado mais populoso do país. A capital e cidade mais populosa é São Luís. Outros municípios
+    com população
+    superior a cem mil habitantes são Imperatriz, São José de Ribamar, Timon, Caxias, Codó, Paço do Lumiar, Açailândia e
+    Bacabal.
+    Em termos de produto interno bruto, é o quarto estado mais rico da Região Nordeste do Brasil e o 17º estado mais
+    rico do Brasil.
+    As principais atividades econômicas são a indústria (o trabalho de transformar alumínio e alumina, celulose,
+    alimentícia, madeireira),
+    os serviços, o extrativismo vegetal (babaçu), a agricultura (soja, mandioca, arroz, milho) e a pecuária. Possui um
+    dos menores
+    Índices de Desenvolvimento Humano (IDH) do país, com 0,687 pontos.</b></div>
+
+    <a class="css">Viaje pelo Brasil e se delicie com suas maravilhas</a>
 
 
 <nav>
@@ -44,33 +83,8 @@
 
 
 <a href="https://www.booking.com/region/br/maranhao.pt-br.html" target="_blank">
-  <h4><b><i>Valores dos Hoteis e pousadas do Turismo Maranhense </i></b></h4>
+  <h4><b>Valores dos Hoteis e pousadas do Turismo Maranhense</b></h4>
 </a>
-
-
-
-<header class="titulo">
-  <img src="maranhao/maranhao.PNG" width="1180px" height="550px">
-</header>
-
-<div class="texto">
-  <b>Maranhão é uma das 27 unidades federativas do Brasil, localizada na Região Nordeste do país. O estado faz divisa
-    com três estados
-    brasileiros: Piauí (leste), Tocantins (sul e sudoeste) e Pará (oeste), além do Oceano Atlântico (norte). Com área de
-    331 937,450 km²
-    e com 217 municípios, é o segundo maior estado da região Nordeste e o oitavo maior estado do Brasil. Com uma
-    população de 7 035 055
-    habitantes[7], é o 11º estado mais populoso do país. A capital e cidade mais populosa é São Luís. Outros municípios
-    com população
-    superior a cem mil habitantes são Imperatriz, São José de Ribamar, Timon, Caxias, Codó, Paço do Lumiar, Açailândia e
-    Bacabal.
-    Em termos de produto interno bruto, é o quarto estado mais rico da Região Nordeste do Brasil e o 17º estado mais
-    rico do Brasil.
-    As principais atividades econômicas são a indústria (o trabalho de transformar alumínio e alumina, celulose,
-    alimentícia, madeireira),
-    os serviços, o extrativismo vegetal (babaçu), a agricultura (soja, mandioca, arroz, milho) e a pecuária. Possui um
-    dos menores
-    Índices de Desenvolvimento Humano (IDH) do país, com 0,687 pontos.</b></div>
 
 <section>
   <h3>
