--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
 
     <section id="InteriordeSP">
-        <h4><b><i>Interior de SP</i></b></h4>
+        <h4><b>Interior de SP</b></h4>
         <hr />
         <center>
             <span style='font-size:30px;'>&#128526; I will show the beauty <strong>SOCORRO-SP</strong></p></span>
@@ -801,7 +801,7 @@
     </nav>
 
     <section id="Praias de SP Litoral norte">
-        <h2><b><i>Praias de SP Litoral norte</i></b></h2>
+        <h2><b>Praias de SP Litoral norte</b></h2>
         <hr />
         <center>
             <span style='font-size:30px;'>&#128526; I will show the beauty <strong>
@@ -1429,7 +1429,7 @@
         </nav>
 
         <section id="Região Central e arredores">
-            <h4><b><i>Região Central e arredores</i></b></h4>
+            <h4><b>Região Central e arredores</b></h4>
             <hr />
             <center>
                 <span style='font-size:30px;'>&#128526; I will show the beauty <strong> IBIRAPUERA região central -
