--- a/index.html
+++ b/index.html
@@ -787,7 +787,7 @@
 
     <nav>
         <h1>
-            <p><b><i><a>CLICK AQUI - Vá direto para seu lugar favorito</a></i></b></p>
+            <p><b><a>CLICK AQUI - Vá direto para seu lugar favorito</a></b></p>
         </h1>
         <ul>
             <li><a href="#Valores dos Hoteis e pousadas de cada região">Valores dos Hoteis e pousadas de cada região</a>
@@ -885,8 +885,7 @@
             <img src="img/cara5.PNG" width="663" height="375" <br clear="left">
             <img src="img/cara6.PNG" width="663" height="375" <br clear="left">
             <img src="img/cara7.PNG" width="663" height="375" <br clear="left">
-            <iframe width="1335" height="409" src="https://www.youtube.com/embed/8WWVeEj68IY" frameborder="0" allow="accelerometer; 
-            autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+           
         </section>
 
         <p>As 16 praias de Caraguatatuba estão distribuídas numa orla de 40 km, algumas com infraestrutura
@@ -1177,7 +1176,7 @@
     <div id="conteudo"> </div>
 
     <nav>
-        <p><b><i>CLICK AQUI - Vá direto para seu lugar favorito</i></b></p>
+        <p><b>CLICK AQUI - Vá direto para seu lugar favorito</b></p>
         <ul>
             <li><a href="#Valores dos Hoteis e pousadas de cada região">Valores dos Hoteis e pousadas de cada região</a>
             </li>
@@ -1190,7 +1189,7 @@
     </nav>
 
     <section id="Praias de SP Litoral sul">
-        <h2><b><i>Praias de SP Litoral sul</i></b></h2>
+        <h2><b>Praias de SP Litoral sul</b></h2>
         <hr />
         <center>
             <span style='font-size:30px;'>&#128526; I will show the beauty <strong>SANTOS-SP</strong></span>
